SP final draft - ack and dedication to follow

--- a/Written Outputs/SP_FinalPaper/SP_FinalPaper_LaTeXFiles/acknowledgment.tex
+++ b/Written Outputs/SP_FinalPaper/SP_FinalPaper_LaTeXFiles/acknowledgment.tex
@@ -1,6 +1,9 @@
 %   Filename    : acknowledgment.tex 
+\doublespacing
 \begin{center}
 	\textbf{Acknowledgment}
 \end{center}
 
-``Hello, world.''
+% the acknowledgements recognize individuals who have supported the writer’s scholarly efforts as they relate to the research (professors. research persons) etc. Those who helped directly in the research.
+% guide: https://capella.libanswers.com/doctoralsupport/faq/132979
+Lorem ipsum.
