--- a/Written Outputs/SP_FinalPaper/SP_FinalPaper_LaTeXFiles/appendix_A.tex
+++ b/Written Outputs/SP_FinalPaper/SP_FinalPaper_LaTeXFiles/appendix_A.tex
@@ -6,11 +6,109 @@
 %                 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\chapter{Appendix}
+\chapter{User/Main Interface}
 \label{sec:appendixa}
 
+\begin{figure}[!h]
+    \centering
+    \begin{subfigure}[c]{0.30\linewidth}
+        \centering
+        \includegraphics[scale=0.15]{figures/Chapter4/Main/PermissionOff.jpg}
+    \end{subfigure}
+    \centering
+    \begin{subfigure}[c]{0.30\linewidth}
+        \centering
+        \includegraphics[scale=0.15]{figures/Chapter4/Main/b4-Home.jpg}
+    \end{subfigure}
+    \centering
+    \begin{subfigure}[c]{0.30\linewidth}
+        \centering
+        \includegraphics[scale=0.15]{figures/Chapter4/Main/Home.jpg}
+    \end{subfigure}
+    \caption{Location Permissions Call-to-action}
+    \label{fig:locationPermission}
+\end{figure}
+
+\begin{figure}[!h]
+    \centering
+    \begin{subfigure}[c]{0.30\linewidth}
+        \centering
+        \includegraphics[scale=0.15]{figures/Chapter4/Main/Nearby-1.jpg}
+    \end{subfigure}
+    \centering
+    \begin{subfigure}[c]{0.30\linewidth}
+        \centering
+        \includegraphics[scale=0.15]{figures/Chapter4/Main/CallPNP.jpg}
+    \end{subfigure}
+    \centering
+    \begin{subfigure}[c]{0.30\linewidth}
+        \centering
+        \includegraphics[scale=0.15]{figures/Chapter4/Main/EmailPNP.jpg}
+    \end{subfigure}
+    \caption{Contact Nearest PNP Station}
+    \label{fig:contactPNP}
+\end{figure}
 
 
+\begin{figure}[!h]
+    \centering
+    \begin{subfigure}[c]{0.40\linewidth}
+        \centering
+        \includegraphics[scale=0.15]{figures/Chapter4/Main/NoNotifications.jpg}
+    \end{subfigure}
+    \centering
+    \begin{subfigure}[c]{0.40\linewidth}
+        \centering
+        \includegraphics[scale=0.15]{figures/Chapter4/Main/NoUpdates.jpg}
+    \end{subfigure}
+    \caption{Empty State Pages}
+    \label{fig:submitReport}
+\end{figure}
+
+\begin{figure}[!h]
+    \centering
+    \begin{subfigure}[c]{0.40\linewidth}
+        \centering
+        \includegraphics[scale=0.15]{figures/Chapter4/Main/Report-3.jpg}
+    \end{subfigure}
+    \centering
+    \begin{subfigure}[c]{0.40\linewidth}
+        \centering
+        \includegraphics[scale=0.15]{figures/Chapter4/Main/Report-3-1.jpg}
+    \end{subfigure}
+    \caption{Rejected Report}
+    \label{fig:removeNotification}
+\end{figure}
+
+\begin{figure}[!h]
+    \centering
+    \begin{subfigure}[c]{0.40\linewidth}
+        \centering
+        \includegraphics[scale=0.15]{figures/Chapter4/Main/Notifications-1.jpg}
+    \end{subfigure}
+    \centering
+    \begin{subfigure}[c]{0.40\linewidth}
+        \centering
+        \includegraphics[scale=0.15]{figures/Chapter4/Main/Notifications-3.jpg}
+    \end{subfigure}
+    \caption{Remove/Hide Notifications}
+    \label{fig:removeNotification}
+\end{figure}
+
+\begin{figure}[!h]
+    \centering
+    \begin{subfigure}[c]{0.40\linewidth}
+        \centering
+        \includegraphics[scale=0.15]{figures/Chapter4/Main/SubmitReport-1.jpg}
+    \end{subfigure}
+    \centering
+    \begin{subfigure}[c]{0.40\linewidth}
+        \centering
+        \includegraphics[scale=0.15]{figures/Chapter4/Main/SubmitReport-2.jpg}
+    \end{subfigure}
+    \caption{Confirm Submission of Report}
+    \label{fig:submitReport}
+\end{figure}
 % Save the file you want to include in PDF format.
 % Uncomment the commant below specifying the correct appendix file. 
 %\includepdf[pages=-, scale = 0.9, pagecommand={}, offset = -30 0]{appendixA.pdf}
