--- a/Written Outputs/SP_FinalPaper/SP_FinalPaper_LaTeXFiles/appendix_B.tex
+++ b/Written Outputs/SP_FinalPaper/SP_FinalPaper_LaTeXFiles/appendix_B.tex
@@ -6,8 +6,92 @@
 %                 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\chapter{Resource Persons}
+\chapter{PNP Interface}
 \label{sec:appendixb}
+\begin{figure}[!h]
+    \centering
+    \begin{subfigure}[c]{1\linewidth}
+        \centering
+        \includegraphics[scale=0.25]{figures/Chapter4/PNP/Verified.png}
+    \end{subfigure}
+    \caption{Navigation Rail View}
+    \label{fig:NavRail}
+\end{figure}
+
+\begin{figure}[!h]
+    \centering
+    \begin{subfigure}[c]{1\linewidth}
+        \centering
+        \includegraphics[scale=0.25]{figures/Chapter4/PNP/CaseView-1.png}
+    \end{subfigure}
+    \centering
+    \begin{subfigure}[c]{1\linewidth}
+        \centering
+        \includegraphics[scale=0.25]{figures/Chapter4/PNP/CaseView-2.png}
+    \end{subfigure}
+    \caption{Case View of Missing Person}
+    \label{fig:caseViewDetails}
+\end{figure}
+
+\begin{figure}[!h]
+    \centering
+    \begin{subfigure}[c]{1\linewidth}
+        \centering
+        \includegraphics[scale=0.25]{figures/Chapter4/PNP/Reportee.png}
+    \end{subfigure}
+    \caption{Reportee Details View}
+    \label{fig:ReporteeDetails}
+\end{figure}
+
+\begin{figure}[!h]
+    \centering
+    \begin{subfigure}[c]{1\linewidth}
+        \centering
+        \includegraphics[scale=0.25]{figures/Chapter4/PNP/NoReportsPNP.png}
+    \end{subfigure}
+    \caption{Empty State of No Reports}
+    \label{fig:NoReportsPNP}
+\end{figure}
+
+\begin{figure}[!h]
+    \centering
+    \begin{subfigure}[c]{1\linewidth}
+        \centering
+        \includegraphics[scale=0.20]{figures/Chapter4/PNP/ChangeStatus-3.png}
+    \end{subfigure}
+    \centering
+    \begin{subfigure}[c]{1\linewidth}
+        \centering
+        \includegraphics[scale=0.20]{figures/Chapter4/PNP/ChangeStatus-4.png}
+    \end{subfigure}
+    \centering
+    \begin{subfigure}[c]{1\linewidth}
+        \centering
+        \includegraphics[scale=0.20]{figures/Chapter4/PNP/Already Found.png}
+    \end{subfigure}
+    \caption{Change Status to Already Found}
+    \label{fig:ChangeStatusFound}
+\end{figure}
+
+\begin{figure}[!h]
+    \centering
+    \begin{subfigure}[c]{1\linewidth}
+        \centering
+        \includegraphics[scale=0.20]{figures/Chapter4/PNP/Rejected-1.png}
+    \end{subfigure}
+    \centering
+    \begin{subfigure}[c]{1\linewidth}
+        \centering
+        \includegraphics[scale=0.20]{figures/Chapter4/PNP/Rejected-2.png}
+    \end{subfigure}
+    \centering
+    \begin{subfigure}[c]{1\linewidth}
+        \centering
+        \includegraphics[scale=0.20]{figures/Chapter4/PNP/Rejected-4.png}
+    \end{subfigure}
+    \caption{Change Status to Rejected}
+    \label{fig:ChangeStatusRejected}
+\end{figure}
 
 %
 %  Indicate your resource persons here:
