--- a/Written Outputs/SP_FinalPaper/SP_FinalPaper_LaTeXFiles/dedication.tex
+++ b/Written Outputs/SP_FinalPaper/SP_FinalPaper_LaTeXFiles/dedication.tex
@@ -3,4 +3,5 @@
 	\textbf{Dedication}
 \end{center}
 
-``Hello, world.''
+%insert dedication to family/friends/significant inviduals. More personal compared to acknowledgement. guide: https://capella.libanswers.com/doctoralsupport/faq/132979
+Lorem ipsum.
