--- a/Written Outputs/SP_FinalPaper/SP_FinalPaper_LaTeXFiles/main.tex
+++ b/Written Outputs/SP_FinalPaper/SP_FinalPaper_LaTeXFiles/main.tex
@@ -22,7 +22,7 @@
 \newpage
 \listoffigures                    %generate List of Figures
 \newpage                       
-%\listoftables                     %generate List of Tables
+\listoftables                     %generate List of Tables
 \newpage
 \pagenumbering{arabic}            %number pages as 1, 2, 3, etc...
 \setcounter{page}{1}              
