--- a/Written Outputs/SP_FinalPaper/SP_FinalPaper_LaTeXFiles/preamble.tex
+++ b/Written Outputs/SP_FinalPaper/SP_FinalPaper_LaTeXFiles/preamble.tex
@@ -3,7 +3,10 @@
 %               a. specify related packages
 %               b. set margins, commands, etc.
 %\documentclass[12pt,titlepage,onepage, letterpaper]{article}
-\documentclass[12pt,titlepage,twopage, letterpaper]{report}
+\documentclass[12pt,titlepage,twopage, letterpaper]{book}
+\usepackage{setspace}
+\doublespacing
+
 %
 %-- specify related packages
 % \usepackage[utf8x]{inputenc}
@@ -29,7 +32,6 @@
                                %-- example:  \textcolor{red}{This is the colored text in red.}
 \usepackage{url}  %-- allows use of URLs example: \url{https:\ccs1.dlsu.edu.ph}
 \usepackage{tabularx}
- \usepackage{setspace}
 
 
 %
