--- a/Written Outputs/SP_FinalPaper/SP_FinalPaper_LaTeXFiles/title_page.tex
+++ b/Written Outputs/SP_FinalPaper/SP_FinalPaper_LaTeXFiles/title_page.tex
@@ -3,7 +3,7 @@
 \centering
 
 %-- **EDIT** the following line to indicate your thesis title
-\thestitle{HanApp: A Missing Persons Reporting and Tracking Application in the Philippines}
+\thestitle{HanApp: A Missing Persons Reporting and Alerting Application Suite in the Philippines}
 
 \vspace{1.75cm}
 A Special Problem\\
