--- a/Written Outputs/SP_FinalPaper/SP_FinalPaper_LaTeXFiles/chapter_2.tex
+++ b/Written Outputs/SP_FinalPaper/SP_FinalPaper_LaTeXFiles/chapter_2.tex
@@ -6,7 +6,7 @@
 
 The paper written by Desale H., Tavasalkar P., Vare S., and Shintre R. titled “Android Crime reporter and Missing Person Finder”, details some key insights that can be extremely helpful for the development of the project \cite{desale2020android}. As the title suggests, the study proposed an application that allows users in India to directly report not only missing persons cases but also other crimes to the authorities through the app, with the goal of hastening the reporting process and, subsequently, solving the crime. 
 
-Moreover,  their application features a “panic" feature to quickly record a crime and an "alert" feature to immediately inform authorities of wanted criminal sightings. The proposed app also allowed the user to get updates regarding their submitted case, and allowed authorities to track cases more conveniently.  This aspect of the application is directly in line with the goals of the study and is proof of the viability and significance of the HanApp framework.
+Moreover,  their application features a ``panic" feature to quickly record a crime and an ``alert" feature to immediately inform authorities of wanted criminal sightings. The proposed app also allowed the user to get updates regarding their submitted case, and allowed authorities to track cases more conveniently.  This aspect of the application is directly in line with the goals of the study and is proof of the viability and significance of the HanApp framework.
 
 One key difference with this application compared to HanApp, however, is that this only sends case reports and notifications directly to the police with the sole purpose of expediting the filing of these cases. Whereas HanApp's framework expanded the scope by enabling and enforcing the dissemination of verified information with regards to missing persons cases.
 
@@ -40,9 +40,9 @@ As stated by the definition and example above, Google Firebase, an approach for 
 
 The Global Positioning System (GPS) is, in itself, a United States-owned service that offers positioning, navigation, \& timing (PNT) services to its users. As it is free, open, and reliable, GPS has been used and integrated countless times on a myriad of applications, including ones that are implemented in mobile platforms \cite{gpsGov}.
 
-A seamless application of the Global Positioning System to Android mobile phones was implemented in a paper titled “Abhaya: An Android App for the Safety of Women" by Yarrabothu, R. S., and Thota, B. (2015). The paper describes an app called “Abhaya”, where it employs a quick and easy-to-use alert button from the application integrated within the smartphone, in which a single tap can identify the location or place of the user through the use of GPS services and would thus then send a message comprising the location URL to all registered contacts of the user. Additionally, Abhaya also calls the first person in the registered contact list of the user and periodically sends an SMS every five minutes to the registered contacts until the stop button has been tapped \cite{yarrabothu2015abhaya}.
+A seamless application of the Global Positioning System to Android mobile phones was implemented in a paper titled ``Abhaya: An Android App for the Safety of Women" by Yarrabothu, R. S., and Thota, B. (2015). The paper describes an app called “Abhaya”, where it employs a quick and easy-to-use alert button from the application integrated within the smartphone, in which a single tap can identify the location or place of the user through the use of GPS services and would thus then send a message comprising the location URL to all registered contacts of the user. Additionally, Abhaya also calls the first person in the registered contact list of the user and periodically sends an SMS every five minutes to the registered contacts until the stop button has been tapped \cite{yarrabothu2015abhaya}.
 
-A paper titled “Mobile phone application for reporting and tracking missing persons in Kenya ”, by Elizabeth Mutisya for the Strathmore University (2017), describes developing a centralized system and a mobile application, that hopes to organize the rather inefficient process in Kenya with regards to addressing missing persons cases. The said application uses GPS to determine and tag the location of a missing person, given that missing person has the application on hand, as well as of the sightings reported to increase the effectiveness of the app. It also utilizes the currently centralized database, National Missing and Unidentified Persons System (NamUs) in Kenya to both counter-check, verify, and assist in finding these said missing persons. A web application was also developed in order to assist those who would still want to access the software but do not have the smartphone needed for it to run the application (Android). The application was developed incrementally, starting on a smaller scale and gradually increasing in complexity using the Agile methodology \cite{mutisya2017mobile}.
+A paper titled “Mobile phone application for reporting and tracking missing persons in Kenya”, by Elizabeth Mutisya for the Strathmore University (2017), describes developing a centralized system and a mobile application, that hopes to organize the rather inefficient process in Kenya with regards to addressing missing persons cases. The said application uses GPS to determine and tag the location of a missing person, given that missing person has the application on hand, as well as of the sightings reported to increase the effectiveness of the app. It also utilizes the currently centralized database, National Missing and Unidentified Persons System (NamUs) in Kenya to both counter-check, verify, and assist in finding these said missing persons. A web application was also developed in order to assist those who would still want to access the software but do not have the smartphone needed for it to run the application (Android). The application was developed incrementally, starting on a smaller scale and gradually increasing in complexity using the Agile methodology \cite{mutisya2017mobile}.
 
 %Mutisya, E. (2017) has proposed the utilization of the Global Positioning System (GPS) in the assistance in providing more details about the disappearance of a missing person. This approach has exemplified the fact that GPS services can be applied in finding missing persons. The Abhaya application \cite{yarrabothu2015abhaya} eventually provided the option for continuous tracking of the user or the missing person, provided that he or she has enabled the GPS in the proposed application, as periodically sending SMS instead of real-time tracking requires less processing power compared to the latter.
 
@@ -59,14 +59,13 @@ In Ghana, Google Maps together with GPS was used to successfully map accurate di
 Google Maps and the Google Maps Platform’s open APIs and SDKs, together with GPS technology, makes it a viable technology to be used for developing apps for locating MPs in the country.
 
 \subsection{Location based notification and alarm applications}
-
 Technology and tools such as GPS and Google Maps (and the Google Maps Platform APIs), has made it possible to create applications to notify or alarm the user when they’re at (or near) certain locations. In 2013, an Android application was developed using Google Places API (offered in the Google Maps Platform) and GPS called “GEO ALERT” which would alert a traveler when they’re at a certain spot and it would show them a history of that specific location \cite{garg2013geo}. Another study proposed a location-based notification and alarm Android application utilizing GPS and LBS (location-based service), and it notified the user if a friend is nearby and alarms when the user enters a marked location on the map \cite{kanfade2018location}. More recently in 2022, a study titled “Travellert: A Location Based Alarm Application” developed an application using GPS and Google Maps Platform APIs and GPS which alerted a traveler when they were near their destination to avoid missing their stops \cite{travellert}.
 
 The existence of these studies and location-based notification and alarm applications provide proof of feasibility in using GPS, Google Maps, and similar technologies on how to approach the development of the app’s location-based notification system for alerting users of PNP-verified MP cases near them.
 
 \subsection{Simplified User Experience and Interface Design for Crisis and Emergency-related Applications}
 
-User experience (UX) design is critical in developing effective methods for locating missing people. When someone goes missing, their loved ones may go through a painful and difficult situation. UX design may assist in the development of tools and systems that make the search process simpler, more efficient, and less overwhelming. Hence, in addition to psychological and behavioral behaviors, the emotional experience of criminal behavior must be understood. There is an occurrence of the circumplex of emotions, which presents emotions in a circular order based on the aspects of arousal/non-arousal and pleasure/displeasure \cite{hunt_2020, suchana_2021}. Following this premise, the app will relatively be designed in a calm approach in order to mitigate individuals' emotional experiences during distress. The emotional needs of the users are the top-most priority and need to be taken into account for better user experience. 
+User experience (UX) design is critical in developing effective methods for locating missing people. When someone goes missing, their loved ones may go through a painful and difficult situation. UX design may assist in the development of tools and systems that make the search process simpler, more efficient, and less overwhelming. Hence, in addition to psychological and behavioral factors, the emotional experience of experiencing criminal behavior must be understood. There is an occurrence of the circumplex of emotions, which presents emotions in a circular order based on the aspects of arousal/non-arousal and pleasure/displeasure \cite{hunt_2020, suchana_2021}. Following this premise, the app will relatively be designed in a calm approach in order to mitigate individuals' emotional experiences during distress. The emotional needs of the users are the top-most priority and need to be taken into account for better user experience. 
  
 Designing intuitive and simple-to-use search systems is an important part of UX design in missing persons instances. Everyone should be able to use the platform, including those who are not tech-savvy or have low resources. Illustrations are critical in increasing the user experience of an app \cite{suchana_2021}. They can be used to convey important information, improve the app's aesthetic appeal, and give a feeling of consistency and identity. With that said, the outlined and rounded features of the material design hinges on the notion to help customers through the search process, thus, the design is basic, with clear directions and user-friendly navigation. Also, the color scheme follows a high-contrast theme that helps critical information stand out and be more easily identified. Indigo, a borderline shade of blue and purple, exudes a personality that is calm, trustworthy, and approachable in times of crisis which often results in reliability \cite{babich_2017}. Apart from that, this also caters users who are visually-challenged, especially color-blind users, to interact with the app without hassle. Deuteranomaly and Protanomaly are the common types of colorblindedness that impedes most people \cite{babich_2017, NEI_2019}. Both of them make an individual unable to tell the difference between red and green, hence indigo was utilized to recuperate their needs. 
  
