--- a/Written Outputs/SP_FinalPaper/SP_FinalPaper_LaTeXFiles/declaration.tex
+++ b/Written Outputs/SP_FinalPaper/SP_FinalPaper_LaTeXFiles/declaration.tex
@@ -7,14 +7,17 @@
 		\textbf{Declaration}
 		\end{center}
 
-I/We,  [NAME/S here], hereby certify that this Special Problem, including the pdf file, has been written by me/us  and is the record of work carried out by me/us. Any significant borrowings have been properly acknowledged and referred.
+We,  Guides, Emmanuel Tarek Shayne, Hismaña, Nikko Gabriel, and Torculas, Erru, hereby certify that this Special Problem, including the pdf file, has been written by us  and is the record of work carried out by us. Any significant borrowings have been properly acknowledged and referred.
 
 	\begin{tabular}{lll}
 	\bfseries Name  & \bfseries Signature & \bfseries Date\\ \\
+    Guides, Emmanuel Tarek \\Shayne \\
 	\signaturerule &\signaturerule  & \signaturerule\\ 
 	(Student)\\ \\
+    Hismaña, Nikko Gabriel \\
 	\signaturerule &\signaturerule &\signaturerule\\
 	(Student)\\ \\
+    Torculas, Erru \\
 	\signaturerule &\signaturerule &\signaturerule\\
 	(Student)
 \end{tabular}
